--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background-color: black;
+}
+
+.set_img{
+    background-image: url("/public/icons/528.png");
+    height: 100%;
+    width: 100%;
+}
+
+@media only screen and (min-width: 1740px) {
+    .set_img{
+       background-image: none;
+    }
+  }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
