--- a/src/index.css
+++ b/src/index.css
@@ -91,8 +91,60 @@ input[type=number] {
 
 .blur-background {
   filter: blur(5px); 
-  
 }
+
+.background-container-orange {
+  background-image: url('/public/icons/card.svg'); /* Add your image path */
+  background-size: cover; /* Adjust as needed */
+  background-position: center; /* Adjust as needed */
+  background-repeat: no-repeat;
+  border-radius: 12px; /* Set the height to the viewport height or adjust as needed */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.background-container-purple {
+  background-image: url('/public/icons/card_purple.svg'); /* Add your image path */
+  background-size: cover; /* Adjust as needed */
+  background-position: center; /* Adjust as needed */
+  background-repeat: no-repeat;
+  border-radius: 12px; /* Set the height to the viewport height or adjust as needed */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.background-container-green {
+  background-image: url('/public/icons/card_green.svg'); /* Add your image path */
+  background-size: cover; /* Adjust as needed */
+  background-position: center; /* Adjust as needed */
+  background-repeat: no-repeat;
+  border-radius: 12px; /* Set the height to the viewport height or adjust as needed */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.background-container-pink {
+  background-image: url('/public/icons/card_pink.svg'); /* Add your image path */
+  background-size: cover; /* Adjust as needed */
+  background-position: center; /* Adjust as needed */
+  background-repeat: no-repeat;
+  border-radius: 12px; /* Set the height to the viewport height or adjust as needed */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.background-container-back {
+  background-image: url('/public/icons/grey_rotate.svg'); /* Add your image path */
+  background-size: cover; /* Adjust as needed */
+  background-position: center; /* Adjust as needed */
+  background-repeat: no-repeat;
+  border-radius: 12px; /* Set the height to the viewport height or adjust as needed */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 .reveal {
   position: relative;
