--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ input[type=number] {
   content: "";
   --angle: 0deg;
   border-radius: 78px;
-  @apply absolute inset-0 z-0 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500
+  @apply absolute inset-0 z-0 bg-gradient-to-r from-[##FF4E17] via-[#000000] to-[#000000]
 }
 
 .bg-animation-purple:after {
@@ -198,7 +198,7 @@ input[type=number] {
 .flip-card {
   background-color: transparent;
   width: 50%;
-  height: 30vh;
+ 
 
 }
 
