--- a/src/index.css
+++ b/src/index.css
@@ -67,79 +67,102 @@ input[type=number] {
   @apply absolute inset-0 z-0 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500
 }
 
-@supports (background: paint(houdini)) {
-  .bg-animation-orange:after {
-    animation: rotate-animation 6s linear infinite;
-    background: linear-gradient(var(--angle), #FF4E17, #000000, #000000, #000000);
-  }
 
-  .bg-animation-purple:after {
-    animation: rotate-animation 6s linear infinite;
-    background: linear-gradient(var(--angle), #7D40FF, #000000, #000000, #000000);
-  }
-
-  .bg-animation-green:after {
-    animation: rotate-animation 6s linear infinite;
-    background: linear-gradient(var(--angle), #D7FF01, #000000, #000000, #000000);
-  }
-
-  .bg-animation-pink:after {
-    animation: rotate-animation 6s linear infinite;
-    background: linear-gradient(var(--angle), #FF249D, #000000, #000000, #000000);
-  }
+.bg-animation-orange:after {
+  animation: rotate-animation 6s linear infinite;
+  background: linear-gradient(var(--angle), #FF4E17, #000000, #000000, #000000);
 }
 
+.bg-animation-purple:after {
+  animation: rotate-animation 6s linear infinite;
+  background: linear-gradient(var(--angle), #7D40FF, #000000, #000000, #000000);
+}
+
+.bg-animation-green:after {
+  animation: rotate-animation 6s linear infinite;
+  background: linear-gradient(var(--angle), #D7FF01, #000000, #000000, #000000);
+}
+
+.bg-animation-pink:after {
+  animation: rotate-animation 6s linear infinite;
+  background: linear-gradient(var(--angle), #FF249D, #000000, #000000, #000000);
+}
+
+
 .blur-background {
-  filter: blur(5px); 
+  filter: blur(5px);
 }
 
 .background-container-orange {
-  background-image: url('/public/icons/card.svg'); /* Add your image path */
-  background-size: cover; /* Adjust as needed */
-  background-position: center; /* Adjust as needed */
+  background-image: url('/public/icons/card.svg');
+  /* Add your image path */
+  background-size: cover;
+  /* Adjust as needed */
+  background-position: center;
+  /* Adjust as needed */
   background-repeat: no-repeat;
-  border-radius: 12px; /* Set the height to the viewport height or adjust as needed */
+  border-radius: 12px;
+  /* Set the height to the viewport height or adjust as needed */
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .background-container-purple {
-  background-image: url('/public/icons/card_purple.svg'); /* Add your image path */
-  background-size: cover; /* Adjust as needed */
-  background-position: center; /* Adjust as needed */
+  background-image: url('/public/icons/card_purple.svg');
+  /* Add your image path */
+  background-size: cover;
+  /* Adjust as needed */
+  background-position: center;
+  /* Adjust as needed */
   background-repeat: no-repeat;
-  border-radius: 12px; /* Set the height to the viewport height or adjust as needed */
+  border-radius: 12px;
+  /* Set the height to the viewport height or adjust as needed */
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .background-container-green {
-  background-image: url('/public/icons/card_green.svg'); /* Add your image path */
-  background-size: cover; /* Adjust as needed */
-  background-position: center; /* Adjust as needed */
+  background-image: url('/public/icons/card_green.svg');
+  /* Add your image path */
+  background-size: cover;
+  /* Adjust as needed */
+  background-position: center;
+  /* Adjust as needed */
   background-repeat: no-repeat;
-  border-radius: 12px; /* Set the height to the viewport height or adjust as needed */
+  border-radius: 12px;
+  /* Set the height to the viewport height or adjust as needed */
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .background-container-pink {
-  background-image: url('/public/icons/card_pink.svg'); /* Add your image path */
-  background-size: cover; /* Adjust as needed */
-  background-position: center; /* Adjust as needed */
+  background-image: url('/public/icons/card_pink.svg');
+  /* Add your image path */
+  background-size: cover;
+  /* Adjust as needed */
+  background-position: center;
+  /* Adjust as needed */
   background-repeat: no-repeat;
-  border-radius: 12px; /* Set the height to the viewport height or adjust as needed */
+  border-radius: 12px;
+  /* Set the height to the viewport height or adjust as needed */
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .background-container-back {
-  background-image: url('/public/icons/grey_rotate.svg'); /* Add your image path */
-  background-size: cover; /* Adjust as needed */
-  background-position: center; /* Adjust as needed */
+  background-image: url('/public/icons/grey_rotate.svg');
+  /* Add your image path */
+  background-size: cover;
+  /* Adjust as needed */
+  background-position: center;
+  /* Adjust as needed */
   background-repeat: no-repeat;
-  border-radius: 12px; /* Set the height to the viewport height or adjust as needed */
+  border-radius: 12px;
+  /* Set the height to the viewport height or adjust as needed */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -154,30 +177,37 @@ input[type=number] {
 .reveal.active {
   opacity: 1;
 }
+
 .active.fade-bottom {
   animation: fade-bottom 1s ease-in;
 }
+
 .active.fade-left {
   animation: fade-left 1s ease-in;
 }
+
 .active.fade-right {
   animation: fade-right 1s ease-in;
 }
+
 @keyframes fade-bottom {
   0% {
     transform: translateY(50px);
     opacity: 0;
   }
+
   100% {
     transform: translateY(0);
     opacity: 1;
   }
 }
+
 @keyframes fade-left {
   0% {
     transform: translateX(-100px);
     opacity: 0;
   }
+
   100% {
     transform: translateX(0);
     opacity: 1;
@@ -189,6 +219,7 @@ input[type=number] {
     transform: translateX(100px);
     opacity: 0;
   }
+
   100% {
     transform: translateX(0);
     opacity: 1;
@@ -198,7 +229,7 @@ input[type=number] {
 .flip-card {
   background-color: transparent;
   width: 50%;
- 
+
 
 }
 
@@ -216,7 +247,8 @@ input[type=number] {
   transform: rotateY(180deg);
 }
 
-.flip-card-front, .flip-card-back {
+.flip-card-front,
+.flip-card-back {
   position: absolute;
   width: 100%;
   height: 100%;
