--- a/src/index.css
+++ b/src/index.css
@@ -247,6 +247,10 @@ input[type=number] {
   transform: rotateY(180deg);
 }
 
+.flip-card-flip{
+  transform: rotateY(180deg);
+}
+
 .flip-card-front,
 .flip-card-back {
   position: absolute;
